--- a/game.html
+++ b/game.html
@@ -16,11 +16,13 @@
         <div id="game justify-center flex-column">
             <div id="hud">
                 <div id="hud-item">
-                    <p class="hud-prefix">
-                        Question
+                    <p id="progressText" class="hud-prefix">
+                        
                     </p>
-                    <h1 class="hud-main-text" id="questionCounter">
-                        1/3
+                    <div id="progressBar">
+                        <div id="progress-bar-full"></div>
+                    </div>
+                        
                     </h1>
                 </div>
                 <div id="hud-item">
